--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
     <style>
-        .container{
+       /* .container{
             width:30%;
         }
         #css .ng-pristine {
@@ -33,22 +33,35 @@
         }
         .error{
             color: red;
-        }
+        }*/
     </style>
 </head>
 <body>
 <div class="container">
 
-    <form class="form-signin"  name="form">
+    <form class="form-signin form-horizontal"  name="form">
         <div id="css">
             <h2 class="form-signin-heading">Login</h2>
-            <input type="text" autofocus="" placeholder="Username" class="form-control input-sm" name="username"  required="" ng-model="username"  ng-minlength="3" />
-            <span class="error" ng-show="form.username.$error.minlength">User name must be greater than 3.</span>
-            <br>
+            <div class="form-group">
+                <label class="control-label col-xs-2">Username</label>
+                <div class="col-xs-10">
+                <input type="text" autofocus="" placeholder="Username" class="form-control input-sm" name="username"  required="" ng-model="username"  ng-minlength="3" />
+                <span class="error" ng-show="form.username.$error.minlength">User name must be greater than 3.</span>
+            </div>
+            </div>
+          <div class="form-group">
+             <label class="control-label col-xs-2">Password</label>
+             <div class="col-xs-10">
             <input type="password" placeholder="Password" class="form-control input-sm" ng-model="password" required="">
-            <br>
+        </div>
+         </div>
+         <div class="form-group">
+         <div class="col-xs-offset-2 col-xs-10">
             <button type="submit"  ng-disabled="form.$invalid " class="btn btn-primary ">Sign in</button>
         </div>
+    </div>
+        </div>
+
     </form>
 
 </div>
