--- a/index.html
+++ b/index.html
@@ -37,33 +37,29 @@
     </style>
 </head>
 <body>
-<div class="container">
-
-    <form class="form-signin form-horizontal"  name="form">
-        <div id="css">
-            <h2 class="form-signin-heading">Login</h2>
-            <div class="form-group">
-                <label class="control-label col-xs-2">Username</label>
-                <div class="col-xs-10">
-                <input type="text" autofocus="" placeholder="Username" class="form-control input-sm" name="username"  required="" ng-model="username"  ng-minlength="3" />
-                <span class="error" ng-show="form.username.$error.minlength">User name must be greater than 3.</span>
-            </div>
-            </div>
-          <div class="form-group">
-             <label class="control-label col-xs-2">Password</label>
-             <div class="col-xs-10">
-            <input type="password" placeholder="Password" class="form-control input-sm" ng-model="password" required="">
+<div class="container ">
+  
+  <form class="form-horizontal">
+    <div class="form-group">
+        <label for="inputEmail" class="control-label col-xs-2">Email</label>
+        <div class="col-xs-10">
+            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
         </div>
-         </div>
-         <div class="form-group">
-             <div class="col-xs-offset-2 col-xs-10">
-                <button type="submit"  ng-disabled="form.$invalid " class="btn btn-primary ">Sign in</button>
-            </div>
+    </div>
+    <div class="form-group">
+        <label for="inputPassword" class="control-label col-xs-2">Password</label>
+        <div class="col-xs-10">
+            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
         </div>
+    </div>
+    <!-- style="margin-left:180px;" -->
+    <div class="form-group ">
+        <div class="col-xs-offset-2 col-xs-10 pull-right" >
+            <button type="submit" class="btn btn-primary">Login</button>
         </div>
-
-    </form>
-
+    </div>
+</form>
+   </div>
 </div>
 </body>
 </html>
